--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,3 +3,6 @@ werkzeug==2.3.7
 flask-cors==4.0.0
 selenium==4.16.0
 webdriver-manager==4.0.1
+gunicorn==21.2.0
+python-dotenv==1.0.0
+requests==2.32.3
